--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,9 @@
 
 [dev]
   functions = "netlify/functions"
+  
+[[redirects]]
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  force = true
